--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(58, 57, 57) 0%, rgb(148, 144, 144) 100%);
-    height: 80px;
+    background: transparent;
+    height: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,10 +9,15 @@
     top: 0;
     z-index: 999;
   }
-  img{
-   width: 35%;
-   
+
+  .navbar.active {
+    background: linear-gradient(90deg, rgb(58, 57, 57) 0%, rgb(148, 144, 144) 100%);;
+    height: 70px;
+    transition: 0.3s;
+    position: sticky;
+    z-index: 10000;
   }
+
   .navbar-container {
     display: flex;
     justify-content: center;
@@ -89,14 +94,14 @@
       width: 100%;
       height: 90vh;
       position: absolute;
-      top: 80px;
+      top: 70px;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
     }
   
     .nav-menu.active {
-      background: #242222;
+      background: linear-gradient(90deg, rgb(58, 57, 57) 0%, rgb(148, 144, 144) 100%);
       left: 0;
       opacity: 1;
       transition: all 0.5s ease;
